--- a/home/home.html
+++ b/home/home.html
@@ -11,7 +11,7 @@
     <div id="logo">
         <div>
             <a href="https://www.jmccontabilidade.com.br/">
-                <img src="img/logo.png" height="300" width="1350"/> 
+                <img src="img/logo.png"/> 
             </a>
         </div>
     </div>
@@ -27,16 +27,16 @@
         <a href="">
             <button class="botaoAba">Contatos</button>
         </a>
-        <a href="">
+        <a href="http://127.0.0.1:5500/aboutUs/aboutUs.html">
             <button class="botaoAba">Sobre nós</button>
         </a>
     </div>
 
-    <div id="button">
+    <div id="fundo">
+        <img src="img/CAPA.png" alt="">
         <a href="http://127.0.0.1:5500/agenda/agenda.html">
-            <button class = "botao">Clique aqui para fazer um agendamento</button>
+            <button class="botao">FAÇA SEU AGENDAMENTO AQUI</button>
         </a>
     </div>
-    
 </body>
 </html>
