--- a/localizacao/localizacao.html
+++ b/localizacao/localizacao.html
@@ -10,14 +10,15 @@
 <body>
     <div id="logo">
         <div>
-            <a href="https://www.jmccontabilidade.com.br/">
+            <a href="http://127.0.0.1:5500/home/home.html">
                 <img src="img/logo.png" height="300" width="1350"/> 
             </a>
         </div>
     </div>
     
     <div id="cabecalho">
-        <h1 id="titulo">JUNTOS SERÁ MAIS FÁCIL CRESCER</h1>
+        <h1 id="titulo">JMC CONTABILIDADE</h1>
+        <h2 id="titulo2">30 Anos de História</h2>
     </div>
 
     <div id="subcabecalho">
@@ -26,7 +27,11 @@
 
     <div id="conteudo">
         <label id="texto">
-            De Segunda à Sexta das 07:30hs às 18:00hs  |  Rua Epitácio Pessoa, nº1006 – Vila Tibério  |  Ribeirão Preto/SP – CEP 14050-430<br>
+            De Segunda à Sexta das 07:30hs às 18:00hs<br>Rua Epitácio Pessoa, nº1006 – Vila Tibério Ribeirão Preto/SP – CEP 14050-430<br>
         </label>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.525535850429!2d-47.82578978544222!3d-21.171272183568114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b9be60bd52f74b%3A0x5e9a254a2bc59560!2sJmc%20Contabilidade!5e0!3m2!1spt-BR!2sbr!4v1631122545780!5m2!1spt-BR!2sbr" width="1200" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe></body>
+    </div>
+    <div id="mapa" align="center">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.525535850429!2d-47.82578978544222!3d-21.171272183568114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b9be60bd52f74b%3A0x5e9a254a2bc59560!2sJmc%20Contabilidade!5e0!3m2!1spt-BR!2sbr!4v1631122545780!5m2!1spt-BR!2sbr" width="1000" height="360" style="border:0;" allowfullscreen="true" align="middle" loading="lazy"></iframe>
+    </div>
+</body>
 </html>
