--- a/teste.html
+++ b/teste.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="agenda.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="teste.css" media="screen">
     <title>Agenda | JMC Contabilidade</title>
 </head>
 <body>
     <div id="logo">
         <div>
-            <a href="http://127.0.0.1:5500/home/home.html">
-                <img src="img/logo.png"/> 
+            <a href="https://www.jmccontabilidade.com.br/">
+                <img src="logo.png"/> 
             </a>
         </div>
     </div>
 
-    <div class="cabecalho">
-        <h1 id="titulo">Agendamento de Reuniões</h1><br>
-        <!-- <p id="subtitulo">Insira os dados da Reunião</p> -->
+    <div id="cabecalho">
+        <h1 id="titulo">JMC CONTABILIDADE</h1>
+        <h2 id="titulo2">30 Anos de História</h2>
     </div>
 
+    <div id="subcabecalho">
+        <label id="subtitulo"><strong>FAÇA SEU AGENDAMENTO</strong></label>
+    </div>
+    
     <form>
         <fieldset class="grupo">
             <div class="campo">
