--- a/agenda/agenda.html
+++ b/agenda/agenda.html
@@ -10,17 +10,21 @@
 <body>
     <div id="logo">
         <div>
-            <a href="http://127.0.0.1:5500/home/home.html">
+            <a href="https://www.jmccontabilidade.com.br/">
                 <img src="img/logo.png"/> 
             </a>
         </div>
     </div>
 
-    <div class="cabecalho">
-        <h1 id="titulo">Agendamento de Reuniões</h1><br>
-        <!-- <p id="subtitulo">Insira os dados da Reunião</p> -->
+    <div id="cabecalho">
+        <h1 id="titulo">JMC CONTABILIDADE</h1>
+        <h2 id="titulo2">30 Anos de História</h2>
     </div>
 
+    <div id="subcabecalho">
+        <label id="subtitulo"><strong>FAÇA SEU AGENDAMENTO</strong></label>
+    </div>
+    
     <form>
         <fieldset class="grupo">
             <div class="campo">
